# safa-api

./: .gitignore  Cargo.toml  README.md  build.sh  test.txt
extra/: Cargo.toml
extra/src/: crt0.rs
src/: alloc.rs  backtrace.rs  lib.rs  mem.rs  process.rs  raw.rs  resource.rs  shm.rs  sockets.rs  syscalls.rs  vtty.rs
src/net/: dns.rs  mod.rs
src/process/: args.rs  env.rs  init.rs  mod.rs  stdio.rs
src/sockets/: mod.rs  socket.rs  udp.rs  unix.rs
src/sync/: cell.rs  locks.rs  mod.rs
src/syscalls/: call.rs  clock.rs  fs.rs  futex.rs  io.rs  mem.rs  misc.rs  mod.rs  process.rs  process_misc.rs  raw.rs  resources.rs  sockets.rs  thread.rs  types.rs
