[package]
name = "safa-api"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/SafaOS/safa-api"
categories = ["os"]
keywords = ["kernel", "libos"]
license = "MIT"
description = "A high-level API over SafaOS's syscalls"

[lib]
test = false

[dependencies]
safa-abi = { version = "0.2.6" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1", optional = true }


[features]
default = []
std = ["safa-abi/std"]
rustc-dep-of-std = [
    "core",
    "alloc",
    "compiler_builtins/rustc-dep-of-std",
    "safa-abi/rustc-dep-of-std",
]

[package.metadata.docs.rs]

default-target = "x86_64-unknown-none"
targets = []

[profile.release]
lto = true
