[package]
name = "safa-api"
version = "0.4.3"
edition = "2021"
repository = "https://github.com/SafaOS/safa-api"
categories = ["os"]
keywords = ["kernel", "libos"]
license = "MIT"
description = "A high-level API over SafaOS's syscalls"

[lib]
test = false

[dependencies]
safa-abi = { version = "0.5.4", git = "https://github.com/SafaOS/safa-abi" }
simpldns = "0.1"
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1", optional = true }
mini-backtrace = { version = "0.1.4", optional = true }


[features]
default = []

std = ["safa-abi/std"]
linkonce = []
backtrace = ["mini-backtrace"]

rustc-dep-of-std = [
    "core",
    "alloc",
    "compiler_builtins/rustc-dep-of-std",
    "safa-abi/rustc-dep-of-std",
    "simpldns/rustc-dep-of-std",
    "linkonce",
]

[package.metadata.docs.rs]

default-target = "x86_64-unknown-none"
targets = []

[profile.release]
lto = true
